@@ -397,6 +397,16 @@ static double yLinetoDev(double y, pGEDevDesc dd)
     return yNDCtoDev(y*gpptr(dd)->yNDCPerLine, dd);
 }
 
+static double xChartoDev(double x, pGEDevDesc dd)
+{
+    return xNDCtoDev(x*gpptr(dd)->cex*gpptr(dd)->xNDCPerChar, dd);
+}
+
+static double yChartoDev(double y, pGEDevDesc dd)
+{
+    return yNDCtoDev(y*gpptr(dd)->cex*gpptr(dd)->yNDCPerChar, dd);
+}
+
 static double xNICtoDev(double x, pGEDevDesc dd)
 {
     return gpptr(dd)->inner2dev.ax + x*gpptr(dd)->inner2dev.bx;
@@ -566,6 +576,16 @@ static double xDevtoLine(double x, pGEDevDesc dd)
 static double yDevtoLine(double y, pGEDevDesc dd)
 {
     return yDevtoNDC(y, dd)/gpptr(dd)->yNDCPerLine;
+}
+
+static double xDevtoChar(double x, pGEDevDesc dd)
+{
+    return xDevtoNDC(x, dd)/(gpptr(dd)->cex * gpptr(dd)->xNDCPerChar);
+}
+
+static double yDevtoChar(double y, pGEDevDesc dd)
+{
+    return yDevtoNDC(y, dd)/(gpptr(dd)->cex * gpptr(dd)->yNDCPerChar);
 }
 
 static double xDevtoNIC(double x, pGEDevDesc dd)
@@ -813,6 +833,9 @@ void GConvert(double *x, double *y, GUnit from, GUnit to, pGEDevDesc dd)
 	*x = xDevtoLine(devx, dd);
 	*y = yDevtoLine(devy, dd);
 	break;
+    case CHARS:
+	*x = xDevtoChar(devx, dd);
+	*y = yDevtoChar(devy, dd);
     case NIC:
 	*x = xDevtoNIC(devx, dd);
 	*y = yDevtoNIC(devy, dd);
@@ -874,6 +897,7 @@ double GConvertX(double x, GUnit from, GUnit to, pGEDevDesc dd)
     case NDC:	devx = xNDCtoDev(x, dd);	break;
     case INCHES:devx = xInchtoDev(x, dd);	break;
     case LINES: devx = xLinetoDev(x, dd);       break;
+    case CHARS: devx = xChartoDev(x, dd);       break;
     case OMA1:	devx = xOMA1toDev(x, dd);	break;
     /*case OMA2:	x <--> y */
     case OMA3:	devx = xOMA3toDev(x, dd);	break;
@@ -894,6 +918,7 @@ double GConvertX(double x, GUnit from, GUnit to, pGEDevDesc dd)
     case NDC:	x = xDevtoNDC(devx, dd);	break;
     case INCHES:x = xDevtoInch(devx, dd);	break;
     case LINES:	x = xDevtoLine(devx, dd);	break;
+    case CHARS:	x = xDevtoChar(devx, dd);	break;
     case NIC:	x = xDevtoNIC(devx, dd);	break;
     case OMA1:	x = xDevtoOMA1(devx, dd);	break;
     /*case OMA2:	x <--> y */
@@ -919,6 +944,7 @@ double GConvertY(double y, GUnit from, GUnit to, pGEDevDesc dd)
     case NDC:	devy = yNDCtoDev(y, dd);	break;
     case INCHES:devy = yInchtoDev(y, dd);	break;
     case LINES: devy = yLinetoDev(y, dd);       break;
+    case CHARS: devy = yChartoDev(y, dd);       break;
     case OMA1:	devy = yOMA1toDev(y, dd);	break;
     /*case OMA2:	x <--> y */
     case OMA3:	devy = yOMA3toDev(y, dd);	break;
@@ -939,6 +965,7 @@ double GConvertY(double y, GUnit from, GUnit to, pGEDevDesc dd)
     case NDC:	y = yDevtoNDC(devy, dd);	break;
     case INCHES:y = yDevtoInch(devy, dd);	break;
     case LINES:	y = yDevtoLine(devy, dd);	break;
+    case CHARS:	y = yDevtoChar(devy, dd);	break;
     case NIC:	y = yDevtoNIC(devy, dd);	break;
     case OMA1:	y = yDevtoOMA1(devy, dd);	break;
     /*case OMA2:	x <--> y */
